# find-all-bitwig

./: .gitignore  BITWIG_CONTROLLER_DESIGN.md  BITWIG_FILE_LOCATIONS.md  CLAUDE.md  OSC_LEARNINGS.md  PLUGIN_GUIDES.md  README.md  docker-compose.yml  pyproject.toml
scripts/: load_midwest_midi.py  midwest_meridian_production.py  set_mix_levels.py
sql/: schema.sql
src/bwctl/: __init__.py  cli.py  config.py
src/bwctl/api/: __init__.py
src/bwctl/commands/: __init__.py  clip.py  device.py  index.py  insert.py  search.py  track.py  transport.py
src/bwctl/db/: __init__.py  connection.py  indexer.py  models.py  search.py
src/bwctl/osc/: __init__.py  bridge.py
tests/: __init__.py  test_search.py
